src/objects/Vend_Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>Logging_Level__c</fullName>
        <label>Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEBUG</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
                <value>
                    <fullName>INFO</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message_Verbose__c</fullName>
        <label>Message Verbose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vend Debug Log</label>
    <nameField>
        <displayFormat>Debug-{0000}</displayFormat>
        <label>Vend Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vend Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>